[gd_scene load_steps=10 format=3 uid="uid://dxqxmjvp2ykbq"]

[ext_resource type="Script" path="res://menus/passive_tree/passive_node.gd" id="1_xxxxx"]
[ext_resource type="Texture2D" uid="uid://bus53v3fsp617" path="res://menus/passive_tree/assets/Icons_10.png" id="2_au70x"]
[ext_resource type="Texture2D" uid="uid://b6gdpf4ybxiud" path="res://menus/passive_tree/assets/Icons_11.png" id="3_6b7tw"]
[ext_resource type="Texture2D" uid="uid://d2pn04dwhfyi0" path="res://menus/passive_tree/assets/Icons_29.png" id="4_68q6g"]
[ext_resource type="Texture2D" uid="uid://6i7kjrm6n5p2" path="res://menus/passive_tree/assets/Icons_34.png" id="5_d438l"]
[ext_resource type="Texture2D" uid="uid://b20jewtlqkh5x" path="res://menus/passive_tree/assets/Icons_19.png" id="6_nbw28"]
[ext_resource type="Texture2D" uid="uid://eswsr6ou0hwd" path="res://menus/passive_tree/assets/icon_background.png" id="7_i0p1v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xxxxx"]
radius = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxxxx"]
bg_color = Color(0.12, 0.12, 0.12, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="PassiveNode" type="Node2D"]
script = ExtResource("1_xxxxx")
defensive_icon = ExtResource("2_au70x")
offensive_icon = ExtResource("3_6b7tw")
projectile_icon = ExtResource("4_68q6g")
utility_icon = ExtResource("5_d438l")
center_icon = ExtResource("6_nbw28")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.5, 0.5, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_i0p1v")

[node name="IconSprite" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xxxxx")

[node name="TooltipContainer" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Background" type="Panel" parent="TooltipContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xxxxx")

[node name="Label" type="Label" parent="TooltipContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 4
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
